layout done. TODO: Add social media icons. Latest or Featured posts sections. Finish contents of pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,23 @@
 {
-  "extends": "astro/tsconfigs/strict",
+  "extends": "astro/tsconfigs/base",
   "compilerOptions": {
-    "strictNullChecks": true
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@layouts/*": [
+        "src/layouts/*"
+      ],
+      "@data/*": [
+        "src/data/*"
+      ],
+      "@images/*": [
+        "src/images/*"
+      ],
+      "@styles/*": [
+        "src/styles/*"
+      ],
+    },
   }
 }
