--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "github:contributions": "tsm scripts/generate-contributions-list.ts"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.1",
     "@astrojs/mdx": "^0.17.2",
     "@astrojs/rss": "^2.1.1",
     "@astrojs/sitemap": "^1.1.0",
     "@astrojs/tailwind": "^3.1.1",
+    "@fontsource/inter": "^4.5.15",
+    "@resvg/resvg-js": "^2.4.1",
+    "@tailwindcss/typography": "^0.5.9",
     "astro": "^2.1.3",
-    "tailwindcss": "^3.0.24"
+    "astro-icon": "^0.8.0",
+    "satori": "^0.4.3",
+    "satori-html": "^0.3.2",
+    "tailwindcss": "^3.0.24",
+    "tsm": "^2.3.0"
   }
 }
