--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "check": "astro check",
     "build": "astro build",
     "preview": "astro preview",
-    "format": "prettier -w --plugin-search-dir=. --cache ."
+    "format": "prettier -w --plugin-search-dir=. --cache .",
+    "github:contributions": "tsm scripts/generate-contributions-list.ts"
   },
   "devDependencies": {
     "@astrojs/image": "0.15.1",
@@ -45,10 +46,12 @@
   "dependencies": {
     "@astrojs/prefetch": "^0.1.2",
     "@astrojs/rss": "^2.1.1",
+    "@octokit/core": "^5.0.0",
     "astro": "2.0.17",
     "astro-icon": "^0.8.0",
     "satori": "0.4.1",
     "satori-html": "^0.3.2",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "tsm": "^2.3.0"
   }
 }
