--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,5 +5,23 @@ enableRobotsTXT = true
 paginate = 10
 summaryLength = 0
 
+
+weight = 1
+title = "home"
+
+[services]
+[services.disqus]
+shortname = 'zizouhuweidi'
+
+[author]
+name = "El Zubeir Huweidi"
+image = "img/zizouhuweidi.jpg"
+headline = "hello, world!"
+links = [
+  { github = "https://github.com/zizouhuweidi/" },
+  { x-twitter = "https://twitter.com/zizouhuweidi/" },
+  { linkedin = "https://www.linkedin.com/in/el-zubeir-huweidi-900899234/" },
+]
+
 [outputs]
 home = ["HTML", "RSS", "JSON"]
