--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -5,7 +5,7 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://jpanther.github.io/congo/docs/configuration/#theme-parameters
 
-colorScheme = "avocado"
+colorScheme = "custom"
 defaultAppearance = "dark"   # valid options: light or dark
 autoSwitchAppearance = false
 
@@ -16,20 +16,20 @@ mainSections = ["posts"]
 # robots = ""
 
 [header]
-layout = "basic" # valid options: basic, hamburger, hybrid, custom
-# logo = "img/zizouhuweidi.jpg"
+layout = "hybrid" # valid options: basic, hamburger, hybrid, custom
+# logo = "img/zizouhuweidi.png"
 showTitle = true
 
 [footer]
 showCopyright = true
 showThemeAttribution = false
-showAppearanceSwitcher = true
+showAppearanceSwitcher = false
 showScrollToTop = true
 
 [homepage]
 layout = "profile" # valid options: page, profile, custom
 showRecent = true
-recentLimit = 3
+recentLimit = 5
 
 [article]
 showDate = true
@@ -63,13 +63,3 @@ excludedKinds = ["taxonomy", "term"]
 
 [taxonomy]
 showTermCount = true
-
-[fathomAnalytics]
-# site = "ABC12345"
-# domain = "llama.yoursite.com"
-
-[verification]
-# google = ""
-# bing = ""
-# pinterest = ""
-# yandex = ""
